--- a/notebooks/01_fetch_data.ipynb
+++ b/notebooks/01_fetch_data.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ea3d5f04-c44f-4f2f-9d32-64508e212d29",
    "metadata": {},
    "outputs": [
@@ -53,15 +53,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloaded ZIP to: ../data/raw/JC_rides_2024_04.zip\n",
-      "Extracted and saved as: ../data/raw/rides_2024_04.csv\n",
-      "Data available at: ../data/raw/rides_2024_04.csv\n"
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_01.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_01.csv\n",
+      "Data available at: ../data/raw/rides_2023_01.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_02.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_02.csv\n",
+      "Data available at: ../data/raw/rides_2023_02.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_03.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_03.csv\n",
+      "Data available at: ../data/raw/rides_2023_03.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_04.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_04.csv\n",
+      "Data available at: ../data/raw/rides_2023_04.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_05.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_05.csv\n",
+      "Data available at: ../data/raw/rides_2023_05.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_06.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_06.csv\n",
+      "Data available at: ../data/raw/rides_2023_06.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_07.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_07.csv\n",
+      "Data available at: ../data/raw/rides_2023_07.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_08.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_08.csv\n",
+      "Data available at: ../data/raw/rides_2023_08.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_09.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_09.csv\n",
+      "Data available at: ../data/raw/rides_2023_09.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_10.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_10.csv\n",
+      "Data available at: ../data/raw/rides_2023_10.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_11.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_11.csv\n",
+      "Data available at: ../data/raw/rides_2023_11.csv\n",
+      "Downloaded ZIP to: ../data/raw/JC_rides_2023_12.zip\n",
+      "Extracted and saved as: ../data/raw/rides_2023_12.csv\n",
+      "Data available at: ../data/raw/rides_2023_12.csv\n"
      ]
     }
    ],
    "source": [
-    "csv_path = fetch_jc_citibike_data(2024, 4)\n",
-    "print(f\"Data available at: {csv_path}\")"
+    "for i in range(1,13):\n",
+    "    csv_path = fetch_jc_citibike_data(2023, i)\n",
+    "    print(f\"Data available at: {csv_path}\")"
    ]
   },
   {
@@ -75,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "citiride_pred_env",
+   "display_name": "citibike",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
