--- a/notebooks/03_transform_processed_data_into_ts_data copy.ipynb
+++ b/notebooks/03_transform_processed_data_into_ts_data copy.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "bb842b7c-e891-4413-b353-738365814ec7",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "9e318239-22ad-4edd-9dee-f9c41ab6cfca",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "56013 2023-01-31 23:58:11              JC003 2023-01-31 23:00:00"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "5d188cf6",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "efe31ae2-62be-4c23-a98d-e6e34d8002eb",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "25207 2023-01-31 23:00:00              JC115      6"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "e942d008-2f0c-4420-bdec-ce7afcbdd79d",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "3 2025-01-28 10:00:00            2     12"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "583cba5e-e814-49e3-a3ed-a5cf252008ba",
    "metadata": {},
    "outputs": [
@@ -498,10 +498,10 @@
       "text/plain": [
        "DatetimeIndex(['2025-01-28 08:00:00', '2025-01-28 09:00:00',\n",
        "               '2025-01-28 10:00:00'],\n",
-       "              dtype='datetime64[ns]', freq='H')"
+       "              dtype='datetime64[ns]', freq='h')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "a15a8f0b-2339-469a-9d57-6fb6965ce91e",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "array([1, 2])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "5b8695d0-7696-4830-a538-a1019c7dfda1",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        "5 2025-01-28 10:00:00            2     12"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "8e0d9c8b-b4ca-4384-9137-e1f6747e9ff4",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        "5 2025-01-28 10:00:00            2     12"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "84806b2d-f2f5-4a86-8f6e-9194bcd65e1d",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
        "5 2025-01-28 10:00:00            2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "6cce7cba-0acb-47b9-bdb9-a96f1baba2fa",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
        "3 2025-01-28 10:00:00            2     12"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "420c9e8e-449e-403b-aa33-8dab82d29db0",
    "metadata": {},
    "outputs": [
@@ -994,7 +994,7 @@
        "5 2025-01-28 10:00:00            2   12.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "c5cc545b-b026-4428-8721-4ef6e92616f2",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
        "5 2025-01-28 10:00:00            2     12"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "66793ac4-08a1-4cda-b559-92158c2d9b03",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "e6cc424e-de87-4549-894b-8b8df5ab0749",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
        "[25208 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "d5766757-b907-476f-bb5f-dd32add70096",
    "metadata": {},
    "outputs": [],
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "7b75283a-c7c4-42aa-81f3-20c4b0f9bce8",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "19 2023-01-01 19:00:00            5532.01      0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "5c586909",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "Name: pickup_location_id, Length: 56014, dtype: bool"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "a7a6d585-5668-45c8-a3bb-2d6c6c791deb",
    "metadata": {
     "scrolled": true
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "6c6480c8-f7fc-42f4-a8ff-7bd915335830",
    "metadata": {},
    "outputs": [
@@ -3143,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "dc896514-f140-4092-89fd-18b609e8a41f",
    "metadata": {},
    "outputs": [],
@@ -3158,7 +3158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "citiride_pred_env",
+   "display_name": "citibike",
    "language": "python",
    "name": "python3"
   },
@@ -3172,7 +3172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
