--- a/notebooks/07_baseline_models.ipynb
+++ b/notebooks/07_baseline_models.ipynb
@@ -13,6 +13,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1c97101f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "ca4e773b-3fdb-4db2-a8b3-fcf09bd54f2f",
    "metadata": {},
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "375ff8cf-b58e-4e8c-8d91-80b325d5cf31",
    "metadata": {},
    "outputs": [
@@ -450,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "607bfb35-84cf-4410-a4ac-5075d1d4a8f1",
    "metadata": {},
    "outputs": [],
@@ -468,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "6bd315ce-2039-4ebf-9c1d-d56003bf3db2",
    "metadata": {},
    "outputs": [],
@@ -479,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "449b1dc0",
    "metadata": {},
    "outputs": [],
@@ -489,118 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "23ab1392-4ba7-48a9-88d7-c882bf500222",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['/opt/anaconda3/envs/citiride_pred_env/lib/python311.zip',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/lib-dynload',\n",
-       " '',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/site-packages',\n",
-       " '/Users/vamsisaigarapati/Documents/github/citibike_ride_prediction']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:urllib3.connectionpool:Retrying (Retry(total=6, connect=7, read=6, redirect=7, status=7)) after connection broken by 'RemoteDisconnected('Remote end closed connection without response')': /vamsisaigarapati/citibike_ride_prediction.mlflow/api/2.0/mlflow/experiments/get-by-name?experiment_name=BaselineModelPreviousHour\n"
+      "INFO:src.experiment_utils:MLflow tracking URI and credentials set via code.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.1166\n",
-      "sdfsadfsdfsd\n",
-      "vamsisaigarapati\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/05/09 19:02:45 INFO mlflow.tracking.fluent: Experiment with name 'BaselineModelPreviousHour' does not exist. Creating a new experiment.\n",
-      "INFO:src.experiment_utils:Experiment set to: BaselineModelPreviousHour\n",
-      "INFO:src.experiment_utils:Started MLflow run with ID: b64daa8b33da4846acbd945b685dc185\n",
-      "/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
-      "  warnings.warn(\n",
-      "Successfully registered model 'BaselineModelLast4Weeks_Model'.\n",
-      "2025/05/09 19:03:05 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: BaselineModelLast4Weeks_Model, version 1\n",
-      "Created version '1' of model 'BaselineModelLast4Weeks_Model'.\n",
-      "INFO:src.experiment_utils:Model logged with name: BaselineModelLast4Weeks_Model\n",
-      "INFO:src.experiment_utils:Logged metric mean_absolute_error: 3.1166126572626762\n",
-      "INFO:src.experiment_utils:✅ Successfully logged run to MLflow/DagsHub.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏃 View run BaselineModelLast4Weeks at: https://dagshub.com/vamsisaigarapati/citibike_ride_prediction.mlflow/#/experiments/1/runs/b64daa8b33da4846acbd945b685dc185\n",
-      "🧪 View experiment at: https://dagshub.com/vamsisaigarapati/citibike_ride_prediction.mlflow/#/experiments/1\n"
-     ]
-    }
-   ],
-   "source": [
-    "from src.experiment_utils import set_mlflow_tracking, log_model_to_mlflow\n",
-    "from dotenv import load_dotenv\n",
-    "sys.path\n",
-    "load_dotenv() \n",
-    "test_mae = mean_absolute_error(y_test, predictions)\n",
-    "print(f\"{test_mae:.4f}\")\n",
-    "log_model_to_mlflow(model, X_test, \"BaselineModelPreviousHour\", \"mean_absolute_error\", score=test_mae)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cd98cb4-c618-4e4d-8cca-d457edea1698",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/opt/anaconda3/envs/citiride_pred_env/lib/python311.zip',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/lib-dynload',\n",
-       " '',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/site-packages',\n",
-       " '/Users/vamsisaigarapati/Documents/github/citibike_ride_prediction',\n",
-       " '/Users/vamsisaigarapati/Documents/github/citibike_ride_prediction',\n",
-       " '/Users/vamsisaigarapati/Documents/github/citibike_ride_prediction',\n",
-       " '/Users/vamsisaigarapati/Documents/github/citibike_ride_prediction']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "<module 'mlflow' from '/opt/anaconda3/envs/citibike/lib/python3.10/site-packages/mlflow/__init__.py'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -610,15 +524,64 @@
      "text": [
       "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.7635\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/05/10 16:19:05 INFO mlflow.tracking.fluent: Experiment with name 'BaselineModelPreviousHour' does not exist. Creating a new experiment.\n",
+      "INFO:src.experiment_utils:Experiment set to: BaselineModelPreviousHour\n",
+      "INFO:src.experiment_utils:Logged mean_absolute_error: 6.763534121235227\n",
+      "/opt/anaconda3/envs/citibike/lib/python3.10/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "Successfully registered model 'BaselineModelPreviousHour'.\n",
+      "2025/05/10 16:19:34 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: BaselineModelPreviousHour, version 1\n",
+      "Created version '1' of model 'BaselineModelPreviousHour'.\n",
+      "INFO:src.experiment_utils:Model logged with name: BaselineModelPreviousHour\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run ambitious-gull-971 at: https://dagshub.com/ramprakashyallavula/citibike_ride_prediction.mlflow/#/experiments/0/runs/ea50b08fbb9345b2a78ddecfc9eb92c4\n",
+      "🧪 View experiment at: https://dagshub.com/ramprakashyallavula/citibike_ride_prediction.mlflow/#/experiments/0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mlflow.models.model.ModelInfo at 0x14d5f0040>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n"
+    "from src.experiment_utils import set_mlflow_tracking, log_model_to_mlflow\n",
+    "\n",
+    "# Set tracking and auth\n",
+    "set_mlflow_tracking()\n",
+    "\n",
+    "# Proceed with logging\n",
+    "test_mae = mean_absolute_error(y_test, predictions)\n",
+    "print(f\"{test_mae:.4f}\")\n",
+    "log_model_to_mlflow(model, X_test, \"BaselineModelPreviousHour\", \"mean_absolute_error\", score=test_mae)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "48af73a3-62fd-4096-bc52-685e9cd787cf",
    "metadata": {},
    "outputs": [],
@@ -628,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "3a514fbb-4ea7-4261-802e-b6d9572ddd76",
    "metadata": {},
    "outputs": [],
@@ -646,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "ce2a60d5-75ce-493f-b938-6f4112abf9eb",
    "metadata": {},
    "outputs": [],
@@ -657,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "5de6b0c8-a9f9-434c-be3e-d7cdf5a4c8ec",
    "metadata": {},
    "outputs": [
@@ -676,22 +639,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "db5cf5f3-3be7-4735-8b43-d752599aedc4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/opt/anaconda3/envs/citiride_pred_env/lib/python311.zip',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/lib-dynload',\n",
+       "['/opt/anaconda3/envs/citibike/lib/python310.zip',\n",
+       " '/opt/anaconda3/envs/citibike/lib/python3.10',\n",
+       " '/opt/anaconda3/envs/citibike/lib/python3.10/lib-dynload',\n",
        " '',\n",
-       " '/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/site-packages',\n",
-       " '/Users/vamsisaigarapati/Documents/github/citibike_ride_prediction']"
+       " '/opt/anaconda3/envs/citibike/lib/python3.10/site-packages',\n",
+       " '/opt/anaconda3/envs/citibike/lib/python3.10/site-packages/setuptools/_vendor',\n",
+       " '/Users/ramprakashyallavula/Desktop/Spring_2025/Applied_ML/final project/citibike_ride_prediction']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -701,42 +665,43 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sdfsadfsdfsd\n",
-      "vamsisaigarapati\n"
-     ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/05/09 18:55:51 INFO mlflow.tracking.fluent: Experiment with name 'BaselineModelPreviousWeek' does not exist. Creating a new experiment.\n",
+      "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n",
       "INFO:src.experiment_utils:Experiment set to: BaselineModelPreviousWeek\n",
-      "INFO:src.experiment_utils:Started MLflow run with ID: 963087d7972641d5bbe1dc05b5dfe0f7\n",
-      "/opt/anaconda3/envs/citiride_pred_env/lib/python3.11/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "INFO:src.experiment_utils:Logged mean_absolute_error: 3.6783263438810523\n",
+      "/opt/anaconda3/envs/citibike/lib/python3.10/site-packages/mlflow/types/utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "Successfully registered model 'BaselineModelPreviousWeek_Model'.\n",
-      "2025/05/09 18:56:09 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: BaselineModelPreviousWeek_Model, version 1\n",
-      "Created version '1' of model 'BaselineModelPreviousWeek_Model'.\n",
-      "INFO:src.experiment_utils:Model logged with name: BaselineModelPreviousWeek_Model\n",
-      "INFO:src.experiment_utils:Logged metric mean_absolute_error: 3.6783263438810523\n",
-      "INFO:src.experiment_utils:✅ Successfully logged run to MLflow/DagsHub.\n"
+      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "Registered model 'BaselineModelPreviousWeek' already exists. Creating a new version of this model...\n",
+      "2025/05/10 16:20:34 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: BaselineModelPreviousWeek, version 2\n",
+      "Created version '2' of model 'BaselineModelPreviousWeek'.\n",
+      "INFO:src.experiment_utils:Model logged with name: BaselineModelPreviousWeek\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run BaselineModelPreviousWeek at: https://dagshub.com/vamsisaigarapati/citibike_ride_prediction.mlflow/#/experiments/0/runs/963087d7972641d5bbe1dc05b5dfe0f7\n",
-      "🧪 View experiment at: https://dagshub.com/vamsisaigarapati/citibike_ride_prediction.mlflow/#/experiments/0\n"
+      "🏃 View run capricious-fawn-882 at: https://dagshub.com/ramprakashyallavula/citibike_ride_prediction.mlflow/#/experiments/1/runs/58e058c746004838a7bd00f928db80c2\n",
+      "🧪 View experiment at: https://dagshub.com/ramprakashyallavula/citibike_ride_prediction.mlflow/#/experiments/1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<mlflow.models.model.ModelInfo at 0x1103d5b10>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -750,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "81cdad64-c6b2-44fc-8cf1-38803199e771",
    "metadata": {},
    "outputs": [],
@@ -803,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "c578e858-3a10-4903-9647-394d975f4a50",
    "metadata": {},
    "outputs": [],
@@ -814,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "ef59ced3-dae5-4ef8-bcc8-234012e4377c",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1153,7 @@
        "[244 rows x 674 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "e106e233-1396-41e9-8906-1d45a1ab6972",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "1da51143-c03b-4e23-ab83-2154b8f12f92",
    "metadata": {},
    "outputs": [],
@@ -1228,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "460395f2",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1213,7 @@
        "Length: 244, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,11 +1221,19 @@
    "source": [
     "X_test[X_test['pickup_location_id']=='JC116'].sort_values(by=[\"pickup_hour\"])['pickup_hour'].unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5700f733",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "citiride_pred_env",
+   "display_name": "citibike",
    "language": "python",
    "name": "python3"
   },
@@ -1274,7 +1247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
