--- a/notebooks/10_registering_inital_model.ipynb
+++ b/notebooks/10_registering_inital_model.ipynb
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5e788647",
    "metadata": {},
    "outputs": [
@@ -2127,8 +2127,8 @@
     "\n",
     "# Log in to Hopsworks\n",
     "project = hopsworks.login(\n",
-    "    project=\"Taxi_Project_Nyc\",  # Replace with your Hopsworks project name\n",
-    "    api_key_value=\"pKWJ0ZubXmykbSWh.vdA1HQGIzh8K4fP1z8hC5Sx17OWxfxMGKSfwdAQrx3BF96AyheDzwIzXXyZknEQi\"  # Replace with your Hopsworks API key\n",
+    "    project=\"NYCTAXI_SP25\",  # Replace with your Hopsworks project name\n",
+    "    api_key_value=\"LHhElU0QiaIpbaMM.JdlorajbPD8goD12c330okwWst6dvec7pTCEuCm7BNBdVYCehZDL6rlThJNhMPge\"  # Replace with your Hopsworks API key\n",
     ")\n",
     "\n",
     "# Access the feature store\n",
@@ -2216,6 +2216,132 @@
     "# Print the model\n",
     "print(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pickup_hour</th>\n",
+       "      <th>pickup_location_id</th>\n",
+       "      <th>rides</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-05-03 23:00:00</td>\n",
+       "      <td>JC081</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-05-01 22:00:00</td>\n",
+       "      <td>JC023</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-04-22 18:00:00</td>\n",
+       "      <td>JC099</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-05-03 01:00:00</td>\n",
+       "      <td>HB408</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-04-24 23:00:00</td>\n",
+       "      <td>JC115</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59835</th>\n",
+       "      <td>2025-05-06 06:00:00</td>\n",
+       "      <td>HB203</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59836</th>\n",
+       "      <td>2025-04-20 05:00:00</td>\n",
+       "      <td>JC020</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59837</th>\n",
+       "      <td>2025-04-16 11:00:00</td>\n",
+       "      <td>JC024</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59838</th>\n",
+       "      <td>2025-04-17 09:00:00</td>\n",
+       "      <td>HB609</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59839</th>\n",
+       "      <td>2025-04-20 19:00:00</td>\n",
+       "      <td>HB506</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>57800 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              pickup_hour pickup_location_id  rides\n",
+       "0     2025-05-03 23:00:00              JC081      0\n",
+       "1     2025-05-01 22:00:00              JC023      0\n",
+       "2     2025-04-22 18:00:00              JC099      7\n",
+       "3     2025-05-03 01:00:00              HB408      0\n",
+       "4     2025-04-24 23:00:00              JC115      0\n",
+       "...                   ...                ...    ...\n",
+       "59835 2025-05-06 06:00:00              HB203      7\n",
+       "59836 2025-04-20 05:00:00              JC020      0\n",
+       "59837 2025-04-16 11:00:00              JC024      0\n",
+       "59838 2025-04-17 09:00:00              HB609      0\n",
+       "59839 2025-04-20 19:00:00              HB506      0\n",
+       "\n",
+       "[57800 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
